8284361: Updating ASM to 9.3 for JDK 19