@@ -82,6 +82,14 @@ public interface Opcodes {
     int ASM8 = 8 << 16 | 0 << 8;
     int ASM9 = 9 << 16 | 0 << 8;
 
+    /**
+      * <i>Experimental, use at your own risk. This field will be renamed when it becomes stable, this
+      * will break existing code using it. Only code compiled with --enable-preview can use this.</i>
+      *
+      * @deprecated This API is experimental.
+      */
+    @Deprecated int ASM10_EXPERIMENTAL = 1 << 24 | 10 << 16 | 0 << 8;
+
     /*
       * Internal flags used to redirect calls to deprecated methods. For instance, if a visitOldStuff
       * method in API_OLD is deprecated and replaced with visitNewStuff in API_NEW, then the
@@ -584,4 +592,3 @@ public interface Opcodes {
     int IFNULL = 198; // visitJumpInsn
     int IFNONNULL = 199; // -
 }
-
